# VTracker

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt  CustomVTracker.cpp  CustomVTracker.h  CustomVTrackerVersion.h  CustomVTrackerVersion.h.in
src/: CMakeLists.txt  VTracker.cpp  VTracker.h  VTrackerVersion.h  VTrackerVersion.h.in
static/: vtracker_principles.cdr
test/: CMakeLists.txt  main.cpp
